# defacto

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: README.md  config.py  main.py  requirements.txt
backend/scripts/: agent.py  colpali.py  embeddings_db.py  fine-tune.py
backend/utils/: api_utils.py  text_utils.py
colpali/: Dockerfile  main.py  requirements.txt
examples/: test_got.py  test_pixtral.py  test_vlm.py
frontend/: ui.py
ocr/: Dockerfile  got.py  requirements.txt
qa/: Dockerfile  api.py
